--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,15 @@
         <link rel="stylesheet" href="assets/css/magnific.popup.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16613099830"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-16613099830');
+</script>
         <link href="assets/images/favicon.png" type="image/x-icon" rel="icon">
     </head>
 
@@ -84,21 +92,21 @@
 
 							<li class="nav-item">
 								<a href="#" class="nav-link dropdown-toggle">
-									Produtos 
+									Pra você 
 								</a>
 
 								<ul class="dropdown-menu">
 									<li class="nav-item">
+										<a href="#parceiros" class="nav-link">Para controle</a>
+									</li>
+									<li class="nav-item">
 										<a href="#parceiros" class="nav-link">Parceiros</a>
 									</li>
 									<li class="nav-item">
+										<a href="#parceiros" class="nav-link">Solicite crédito</a>
+									</li>
+									<li class="nav-item">
 										<a href="contact.html" class="nav-link">Se torne um parceiro</a>
-									</li>
-									<li class="nav-item">
-										<a href="privacy-policy.html" class="nav-link">Política de privacidade</a>
-									</li>
-									<li class="nav-item">
-										<a href="terms-conditions.html" class="nav-link">Termos e condições</a>
 									</li>
 								</ul>
 							</li>
@@ -130,7 +138,7 @@
 									</a>
 								</li>
 								<li>
-									<a class="default-btn text-decoration-none" href="https://accounts.parabank.secure.srv.br/auth/realms/parabank/protocol/openid-connect/auth?client_id=wl-webbanking&redirect_uri=https%3A%2F%2Fwebbanking.parabank.secure.srv.br%2Fapp%2Fvalidate-qrcode&state=7d91f0ed-6752-494d-8ca5-27f4eff06ef0&response_mode=fragment&response_type=code&scope=openid&nonce=02c57118-4194-4b71-b2de-b6995d384ca2" target="_blank">
+									<a class="default-btn text-decoration-none" href="https://accounts.parabank.secure.srv.br/auth/realms/parabank/protocol/openid-connect/auth?client_id=wl-webbanking&redirect_uri=https%3A%2F%2Fwebbanking.parabank.secure.srv.br%2Fapp%2Fvalidate-qrcode&state=7d91f0ed-6752-494d-8ca5-27f4eff06ef0&response_mode=fragment&response_type=code&scope=openid&nonce=02c57118-4194-4b71-b2de-b6995d384ca2">
 										<i class="ri-arrow-right-line"></i>
 										&emsp;Login&emsp;
 									</a>
@@ -533,7 +541,7 @@
 											<h3>Nossos contatos</h3>
 											<ul class="list-unstyled ps-0 mb-0">
 												<li>
-													<strong>Endereço : </strong>R. José Versolato, 111 - Centro São Bernardo do Campo - SP CEP 09750-730
+													<strong>Endereço : </strong>R. José Versolato, 101 - Centro São Bernardo do Campo - SP CEP 09750-730
 												</li>
 												<li>
 													<strong>Email:</strong>
