--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
 								<li>
 									<a class="default-btn-2 text-decoration-none" href="https://webbanking.parabank.secure.srv.br/create-account" target="_blank">
 										<i class="ri-bank-card-2-line"></i>
-										&emsp;Quero ser Parabank!&emsp;
+										&emsp;Quero ser um Parabanker!&emsp;
 									</a>
 									<div class=""></div>
 									<a class="quote d-none text-decoration-none" href="contact.html">
@@ -194,24 +194,20 @@
 					<div class="title">
 						<span class="d-block"></span>
 						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
-						<p>Baixe o nosso app </p>
+						<p></p>
 					</div>
 					<div class="hero-button d-flex align-items-center ">
-						<a class="demo text-decoration-none" href="https://apps.apple.com/tt/app/parabank/id1606960244" target="_blank">
-							<i class="ri-apple-fill"></i> 
-								Apple Store
-							<div class=""><p>&emsp;&emsp;</p></div>
 						</a>
 					</div>
 					<div>
+						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
+						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
+						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
+						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
+
 						<h1>&emsp;</h1>
 					</div>
 					<div class="hero-button d-flex align-items-center">
-						<a class="demo text-decoration-none" href="https://play.google.com/store/apps/details?id=br.srv.secure.app.parabank " target="_blank">
-							<i class="ri-google-play-fill"></i>
-								Google Play
-							<div class=""><p>&emsp;&emsp;</p></div>
-						</a>
 					</div>
 				</div>
 			</div>
