--- a/src/pricing.html
+++ b/src/pricing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Paheli - Cyber Security HTML Template</title>
+        <title>Parabank</title>
 
 		<!-- CSS Files -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
