ajustes das tarefas

--- a/src/para-controle.html
+++ b/src/para-controle.html
@@ -194,32 +194,25 @@
                     <div class="col-lg-4">
                         <div class="services-details-left-sidebar">
                             <div class="single-pages-widget form" data-cue="slideInUp">
-                                <h3>Para buscar</h3>
-                                <form>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="para encontrar...">
-                                        <button type="submit"><i class="ri-search-2-line"></i></button>
-                                    </div>
-                                </form>
                             </div>
                             <div class="single-pages-widget services" data-cue="slideInUp">
                                 <h3>Benefícios do Para controle</h3>
                                 <ul class="list-unstyled ps-0 mb-0">
-                                    <li><a class="text-decoration-none" href="categories.html">Comece a qualquer hora</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Mais limite no cartão de crédito</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Rendimento garantido</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Economize mais</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Controle total</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Praticidade nas compras</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Redução de riscos</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Segurança</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Acesso exclusivo</a></li>
-                                    <li><a class="text-decoration-none" href="categories.html">Sem preocupações</a></li>
+                                    <li><a class="text-decoration-none" >Comece a qualquer hora</a></li>
+                                    <li><a class="text-decoration-none" >Mais limite no cartão de crédito</a></li>
+                                    <li><a class="text-decoration-none" >Rendimento garantido</a></li>
+                                    <li><a class="text-decoration-none" >Economize mais</a></li>
+                                    <li><a class="text-decoration-none" >Controle total</a></li>
+                                    <li><a class="text-decoration-none" >Praticidade nas compras</a></li>
+                                    <li><a class="text-decoration-none" >Redução de riscos</a></li>
+                                    <li><a class="text-decoration-none" >Segurança</a></li>
+                                    <li><a class="text-decoration-none" >Acesso exclusivo</a></li>
+                                    <li><a class="text-decoration-none" >Sem preocupações</a></li>
                                 </ul>
                             </div>
                             <div class="single-pages-widget text-center questions" data-cue="slideInUp">
                                 <h4>Ficou com dúvidas?</h4>
-                                <a href="#">Fala com a gente</a>
+                                <a href="contact.html">Fala com a gente</a>
                             </div>
                         </div>
                     </div>
@@ -232,7 +225,7 @@
 							
                             <p>Invista com o Parabank e transforme seu investimento em limite imediato no seu cartão de crédito. Além disso, maximize seus ganhos com nossos benefícios e faça seu dinheiro render mais!</p>
                             <div class="image" data-cue="slideInUp">
-                                <img src="assets/images/services/services-5.jpg" alt="services-image">
+                                <img src="assets/images/services/services-5.png" alt="services-image">
                             </div>
     						<div class="processing">
                                 <h1>Como funciona:</h1>
@@ -245,10 +238,10 @@
                                                 01
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Comece agora</a>
+                                                <a class="text-decoration-none" >Comece agora</a>
                                             </h3>
                                             <p>Com um investimento inicial de R$100,00, você pode começar a usar o cartão Classic.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -258,10 +251,10 @@
                                                 02
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Mais limite no seu cartão</a>
+                                                <a class="text-decoration-none" >Mais limite no seu cartão</a>
                                             </h3>
                                             <p>Libere imediatamente o limite no seu cartão de crédito através do Para Controle.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -271,10 +264,10 @@
                                                 03
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Rendimento Garantido</a>
+                                                <a class="text-decoration-none" >Rendimento Garantido</a>
                                             </h3>
                                             <p>Após 30 dias, seu investimento começa a render automaticamente. Quanto mais você deixa seu dinheiro guardado, mais ele rende!</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -284,10 +277,10 @@
                                                 04
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Economize mais</a>
+                                                <a class="text-decoration-none" >Economize mais</a>
                                             </h3>
                                             <p>Desfrute de zero anuidade, poupando mais a cada ano.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -297,10 +290,10 @@
                                                 05
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Praticidade nas compras</a>
+                                                <a class="text-decoration-none" >Praticidade nas compras</a>
                                             </h3>
                                             <p>Faça pagamentos online de forma simples e rápida.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -310,10 +303,10 @@
                                                 06
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Redução de riscos</a>
+                                                <a class="text-decoration-none" >Redução de riscos</a>
                                             </h3>
                                             <p>Evite endividamentos desnecessários com o Para Controle.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -323,10 +316,10 @@
                                                 07
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Mais Segurança</a>
+                                                <a class="text-decoration-none" >Mais Segurança</a>
                                             </h3>
                                             <p> Diminua a necessidade de carregar dinheiro; em caso de perda ou roubo, aqui você consegue cancelar o seu cartão imediatamente.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -336,10 +329,10 @@
                                                 08
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Acesso exclusivo</a>
+                                                <a class="text-decoration-none" >Acesso exclusivo</a>
                                             </h3>
                                             <p>Aproveite os programas de benefícios da Visa, incluindo ofertas especiais.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
@@ -349,10 +342,10 @@
                                                 09
                                             </div>
                                             <h3>
-                                                <a class="text-decoration-none" href="service-details.html">Sem preocupações</a>
+                                                <a class="text-decoration-none" >Sem preocupações</a>
                                             </h3>
                                             <p>Seu investimento rende e, se você esquecer de pagar a fatura, o valor é automaticamente debitado do seu investimento.</p>
-                                            <a class="read-more text-decoration-none" href="service-details.html">
+                                            <a class="read-more text-decoration-none" >
                                             </a>
                                         </div>
                                     </div>
