ajuste de imagens

--- a/src/index.html
+++ b/src/index.html
@@ -16,26 +16,25 @@
         <link rel="stylesheet" href="assets/css/magnific.popup.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16613099830"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16613099830"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'AW-16613099830');
+			</script>
+				<link href="assets/images/favicon.png" type="image/x-icon" rel="icon">
+	</head>
 
-  gtag('config', 'AW-16613099830');
-</script>
-        <link href="assets/images/favicon.png" type="image/x-icon" rel="icon">
-    </head>
-
-    <body>
+<body>
 
    <!-- Start Modal -->
    <div class="modal search-modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Confirmação</h5>
+                <h5 class="modal-title">Atenção</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -92,7 +91,7 @@
 
 								<ul class="dropdown-menu">
 									<li class="nav-item">
-										<a href="#parceiros" class="nav-link">Para controle</a>
+										<a href="para-controle.html" class="nav-link">Para controle</a>
 									</li>
 									<li class="nav-item">
 										<a href="#parceiros" class="nav-link">Parceiros</a>
@@ -318,12 +317,6 @@
 							<div class="image-1">
 								<img src="assets/images/about/about-1.png" alt="about-image">
 							</div>
-							<div class="image-2">
-								<img src="assets/images/about/about-2.png" alt="about-image">
-							</div>
-							<div class="image-3">
-								<img src="assets/images/about/about-3.png" alt="about-image">
-							</div>
 						</div>
 					</div>
 					<div class="col-lg-6">
@@ -488,7 +481,13 @@
 							<div class="col-lg-3 col-sm-6 p-0">
 								<div class="single-contact-info">
 									<div class="contact-social">
+										<p style="color: white;">Nossas redes Sociais</p>
 										<ul class="list-unstyled ps-0 mb-0 list">
+											<li class="d-inline-block">
+												<a class="text-decoration-none" target="_blank" href="https://www.linkedin.com/company/mundoparabank/">
+													<i class="ri-linkedin-box-fill" :before></i>
+												</a>
+											</li>
 											<li class="d-inline-block">
 												<a class="text-decoration-none" target="_blank" href="https://www.facebook.com/parabankoficial">
 													<i class="ri-facebook-circle-line"></i>
@@ -506,7 +505,7 @@
 							<div class="col-lg-6">
 								<div class="single-contact-info">
 									<div class="contact-submit d-flex align-items-center justify-content-between">
-										<h>Inscreva-se em nossa Newsletter</h3>
+										<h style="color: white;">Inscreva-se em nossa Newsletter</h3>
 										<form>
 											<div class="form-group">
 												<input type="text" class="form-control" placeholder="Insira seu email">
