--- a/src/para-controle.html
+++ b/src/para-controle.html
@@ -220,7 +220,7 @@
                         <div class="services-details-right-sidebar" data-cue="slideInUp">
                             <h1>O PARA Controle é perfeito para quem deseja ter vantagens e ver seu dinheiro crescer.</h1>
 							<div>
-								<h3> Veja como funciona:</h3>
+								<h3 style="color: #8C73E5;"> Veja como funciona:</h3>
 							</div>
 							
                             <p>Invista com o Parabank e transforme seu investimento em limite imediato no seu cartão de crédito. Além disso, maximize seus ganhos com nossos benefícios e faça seu dinheiro render mais!</p>
@@ -365,7 +365,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-8 col-md-8">
                             <div class="solutions-content">
-                                <h1>Está pronto para ver seu dinheiro render com a gente? Vem ser um</h1>
+                                <h1>Está pronto para ver seu dinheiro render com a gente?</h1>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4">
@@ -405,7 +405,13 @@
 							<div class="col-lg-3 col-sm-6 p-0">
 								<div class="single-contact-info">
 									<div class="contact-social">
+										<p style="color: white;">Nossas redes Sociais</p>
 										<ul class="list-unstyled ps-0 mb-0 list">
+											<li class="d-inline-block">
+												<a class="text-decoration-none" target="_blank" href="https://www.linkedin.com/company/mundoparabank/">
+													<i class="ri-linkedin-box-fill" :before></i>
+												</a>
+											</li>
 											<li class="d-inline-block">
 												<a class="text-decoration-none" target="_blank" href="https://www.facebook.com/parabankoficial">
 													<i class="ri-facebook-circle-line"></i>
@@ -423,7 +429,7 @@
 							<div class="col-lg-6">
 								<div class="single-contact-info">
 									<div class="contact-submit d-flex align-items-center justify-content-between">
-										<h>Inscreva-se em nossa Newsletter</h3>
+										<h style="color: white;">Inscreva-se em nossa Newsletter</h3>
 										<form>
 											<div class="form-group">
 												<input type="text" class="form-control" placeholder="Insira seu email">
