--- a/src/index.html
+++ b/src/index.html
@@ -41,14 +41,15 @@
                 <p>Se sua conta é PJ, o Internet Banking é pra você. Deseja continuar?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <a href="https://ibe.parabank.rubcube.com/login" class="btn btn-primary">OK</a>
+				<a class="default-btn-2 text-decoration-none" href="index.html">
+					&emsp;Sair&emsp;
+				</a>
+                <a href="https://ibe.parabank.rubcube.com/login" class="default-btn text-decoration-none">&emsp;Entrar&emsp;</a>
             </div>
         </div>
     </div>
 </div>
-
-        <!-- End Modal -->
+<!-- End Modal -->
 
 			<!-- Start Navbar Area --> 
 	<div class="navbar-area fixed-top">
@@ -97,7 +98,7 @@
 										<a href="#parceiros" class="nav-link">Parceiros</a>
 									</li>
 									<li class="nav-item">
-										<a href="#parceiros" class="nav-link">Solicite crédito</a>
+										<a href="https://parainstituto.org/" class="nav-link">Para Instituto</a>
 									</li>
 									<li class="nav-item">
 										<a href="contact.html" class="nav-link">Se torne um parceiro</a>
@@ -113,7 +114,7 @@
 						<div class="others-options">
 							<ul>																		
 								<li>
-									<a class="default-btn-2 text-decoration-none" href="https://webbanking.parabank.secure.srv.br/create-account" target="_blank">
+									<a class="default-btn-2 text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">
 										<i class="ri-bank-card-2-line"></i>
 										&emsp;Quero ser um Parabanker!&emsp;
 									</a>
@@ -234,10 +235,10 @@
 								01
 							</div>
 							<h3>
-								<a class="text-decoration-none" href="https://webbanking.parabank.secure.srv.br/create-account" target="_blank">Banco digital</a>
+								<a class="text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">Banco digital</a>
 							</h3>
 							<p>Conta 100% digital grátis e com serviços personalizados pra você!</p>
-							<a class="read-more text-decoration-none" href="https://webbanking.parabank.secure.srv.br/create-account" target="_blank">
+							<a class="read-more text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">
 								Abrir minha conta
 								<i class="ri-arrow-right-line"></i>
 							</a>
@@ -357,7 +358,7 @@
 									<p>Nosso propósito é reabilitar os teus sonhos, por isso temos crédito especial pra você, PCD.</p>
 								</div>
 							</div>
-							<a class="default-btn text-decoration-none" href="https://webbanking.parabank.secure.srv.br/create-account" target="_blank">
+							<a class="default-btn text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">
 								<i class="ri-arrow-right-line"></i>
 								Abrir minha conta agora
 							</a>
@@ -369,10 +370,10 @@
 		<!-- End About Area -->
 
 		<!-- Start Partner Area -->
-		<div class="partner-area pt-100 pb-75"  id="parceiros">
+		<div class="partner-area pt-100 pb-75" id="parceiros">
 			<div class="container">
 				<div class="section-title text-center" data-cue="slideInUp">
-					<span class="d-block">Parceiros</span>
+					<span class="d-block" style="font-family: Verdana;">Parceiros</span>
 					<h2></h2>
 				</div>
 				
@@ -439,7 +440,7 @@
 								<span>Feito com, por e para PCD's</span>
 							</div>
 							<div class="choose-button">
-								<a class="default-btn text-decoration-none" href="https://webbanking.parabank.secure.srv.br/create-account" target="_blank">
+								<a class="default-btn text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">
 									<i class="ri-arrow-right-line"></i>
 									Abrir minha conta agora
 								</a>
