--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -115,7 +115,7 @@
 										</li>
 										-->
 										<li>
-											<a class="default-btn-2 text-decoration-none" href="https://webbanking.parabank.secure.srv.br/create-account" target="_blank">
+											<a class="default-btn-2 text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">
 												<i class="ri-bank-card-2-line"></i>
 												&emsp;Quero ser Parabank!&emsp;
 											</a>
