--- a/src/faq.html
+++ b/src/faq.html
@@ -376,6 +376,11 @@
 									<div class="contact-social">
 										<ul class="list-unstyled ps-0 mb-0 list">
 											<li class="d-inline-block">
+												<a class="text-decoration-none" target="_blank" href="https://www.linkedin.com/company/mundoparabank/">
+													<i class="ri-linkedin-box-fill" :before></i>
+												</a>
+											</li>
+											<li class="d-inline-block">
 												<a class="text-decoration-none" target="_blank" href="https://www.facebook.com/parabankoficial">
 													<i class="ri-facebook-circle-line"></i>
 												</a>
