--- a/src/index.html
+++ b/src/index.html
@@ -202,15 +202,16 @@
 				<div class="hero-content" data-cues="slideInUp">
 					<div class="title">
 						<span class="d-block"></span>
-						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
-						<p></p>
+						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
+						<h2>&emsp;&emsp;&emsp;&emsp;&emsp;</h2>
+						<h2>Baixe o nosso app </h2>
 					</div>
-					<div class="hero-button d-flex align-items-center ">
+					<div class="default-btn-2 text-decoration-none">
+						<a class="demo text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">
+							&emsp;&emsp;Baixar app&emsp;&emsp;
 						</a>
 					</div>
 					<div>
-						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
-						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
 						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
 						<h1>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</h1>
 
