--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 
 								<ul class="dropdown-menu">
 									<li class="nav-item">
-										<a href="para-controle.html" class="nav-link">Para controle</a>
+										<a href="para-controle.html" class="nav-link">Para Controle</a>
 									</li>
 									<li class="nav-item">
 										<a href="#parceiros" class="nav-link">Parceiros</a>
