--- a/src/index.html
+++ b/src/index.html
@@ -239,7 +239,7 @@
 							<h3>
 								<a class="text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">Banco digital</a>
 							</h3>
-							<p>Conta 100% digital grátis e com serviços personalizados pra você!</p>
+							<p>Conta 100% digital grátis, com serviços criados <b>para</b> você!</p>
 							<a class="read-more text-decoration-none" href="https://e3l1.short.gy/parabank" target="_blank">
 								Abrir minha conta
 								<i class="ri-arrow-right-line"></i>
@@ -254,7 +254,7 @@
 							<h3>
 								<a class="text-decoration-none" href="https://shop.parabank.com.br/" target="_blank">Marketplace</a>
 							</h3>
-							<p>Conheça nosso ecossistema de soluções para PCD's.</p>
+							<p>Conheça nosso ecossistema de soluções <b>para</b> PCD's.</p>
 							<a class="read-more text-decoration-none" href="https://shop.parabank.com.br/" target="_blank">
 								Acessar
 								<i class="ri-arrow-right-line"></i>
@@ -269,7 +269,7 @@
 							<h3>
 								<a class="text-decoration-none" href="service-details.html">Crédito</a>
 							</h3>
-							<p>Crédito para comprar sua cadeira de rodas, prótese ou ortese.</p>
+							<p>Crédito <b>para</b> facilitar o acesso a sua cadeira de rodas, prótese ou órtese</p>
 							<a class="read-more text-decoration-none" href="service-details.html">
 								Simular agora
 								<i class="ri-arrow-right-line"></i>
@@ -284,7 +284,7 @@
 							<h3>
 								<a class="text-decoration-none" href="https://parainstituto.org/" target="_blank">Para-instituto</a>
 							</h3>
-							<p>Transformamos vidas através da reabilitação física, esportiva, apoio psicológico e capacitação profissional!</p>
+							<p>Viemos <b>para</b> transformar vidas com reabilitação física, esportiva, apoio psicológico e capacitação.</p>
 							<a class="read-more text-decoration-none" href="https://parainstituto.org/" target="_blank">
 								Conhecer
 								<i class="ri-arrow-right-line"></i>
