--- a/src/faq.html
+++ b/src/faq.html
@@ -390,6 +390,11 @@
 													<i class="ri-instagram-line"></i>
 												</a>
 											</li>
+											<li class="d-inline-block">
+												<a class="text-decoration-none" target="_blank" href="https://www.youtube.com/@Parabankoficial">
+													<i class="ri-youtube-line"></i>
+												</a>
+											</li>
 										</ul>
 									</div>
 								</div>
